--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,18 @@
 # Site settings
-title: Your Blog
-SEOTitle: 你的博客 | Your Blog
+title: Givyuscss Blog
+SEOTitle: Givyuscss Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: ""
+email: xjtu_jrj@xjtu.edu.cn
+description: "Stay hungry Stay foolish"
 keyword: ""
-url: "http://huangxuan.me"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+#url: "http://huangxuan.me"              # your host, for absolute URL
+#baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-#twitter_username:  huxpro
-facebook_username:  huxpro
+github_username:    Givyuscss
 
 
 
@@ -32,8 +28,7 @@ anchorjs: true                          # if you want to customize anchor. check
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate]
-
+plugins: [jekyll-paginate]
 
 
 # Markdown settings
@@ -68,8 +63,8 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Noting, just learning"
+sidebar-avatar: /img/giv_pic.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -84,17 +79,5 @@ friends: [
     {
         title: "Hux Blog",
         href: "http://huangxuan.me"
-    },{
-        title: "Foo",
-        href: "#"
-    },{
-        title: "Bar",
-        href: "#"
-    },{
-        title: "Example Friends",
-        href: "#"
-    },{
-        title: "It helps SEO",
-        href: "#"
     }
 ]
