--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Noting"
+sidebar-about-description: "Nothing"
 sidebar-avatar: /img/giv_pic.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
